--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/QUERYDB
+spring.datasource.url=jdbc:mysql://172.31.20.130:3306/QUERYDB
 spring.datasource.username=user
 spring.datasource.password=password
